--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -28,12 +28,12 @@ img {
  
  <body> 
  	<div> 
- 		<a href="/test1/NewFile1.html"> <img
- 			src="/test1/images/1.jpg">
+ 		<a href="NewFile1.html"> <img
+ 			src="images/1.jpg">
  	<br></br> 
- 		<img src="/test1/images/2.jpg">
+ 		<img src="images/2.jpg">
  		<br></br>
- 		<img src="/test1/images/3.jpg">
+ 		<img src="images/3.jpg">
 	</div> 
 </body> 
  </html> 
